--- a/index.html
+++ b/index.html
@@ -37,7 +37,9 @@
 			<div></div>	
 		</div>
 		<div id="footer" >
-		
+			<span>
+				<i class="copyright icon"></i>Copyright NCKU EE 2016
+			</span>	
 		</div>
 	</body>
 </html>
