input slider js&css

--- a/index.html
+++ b/index.html
@@ -81,27 +81,99 @@
 								</a>
 							</div>
 						</div>
-						<div class="twelve wide stretched column">
-							<div class="ui segment">
-								This is an stretched grid column. This segment will always match the tab height
+						<div>
+							<div>
 							</div>
+							<div>
+							</div>
+							<div>
+							</div>
+							<div>
+							</div>
+							<div>
+							</div>
+							<div>
+							</div>
+							<div>
+							</div>
+							<div>
+							</div>
+							<div>
+							</div>
+							<div>
+							</div>
+						</div>
+						<div>
+						</div>
+						<div>
+						</div>
+						<div>
 						</div>
 					</div>
 				</div>
 				<div class="ui bottom attached segment" id="research_content">
-					<p>Research</p>
+					<div class="ui grid">
+						<div class="four wide column">
+							<div class="ui vertical fluid tabular menu">
+								<a class="item active">
+									Research</br>
+									interest</br>
+								</a>
+								<a class="item">
+									Research</br>
+									group</br>
+								</a>
+							</div>
+						</div>
+					</div>
 				</div>
 				<div class="ui bottom attached segment" id="about_content">
-					<p>About</p>
+					<div class="ui grid">
+						<div class="four wide column">
+							<div class="ui vertical fluid tabular menu">
+								<a class="item active">
+									History
+								</a>
+								<a class="item">
+									Visit us	
+								</a>
+							</div>
+						</div>
+					</div>
 				</div>
 				<div class="ui bottom attached segment" id="people_content">
-					<p>People</p>
+					<div class="ui grid">
+						<div class="four wide column">
+							<div class="ui vertical fluid tabular menu">
+								<a class="item active">
+									Faculty
+								</a>
+								<a class="item">
+									Staff	
+								</a>
+							</div>
+						</div>
+					</div>
 				</div>
 				<div class="ui bottom attached segment" id="students_content">
-					<p>Students</p>
-				</div>
+					<div class="ui grid">
+						<div class="four wide column">
+							<div class="ui vertical fluid tabular menu">
+								<a class="item active">
+									Activity
+								</a>
+								<a class="item">
+									Scholarship	
+								</a>
+								<a class="item">
+									Admission
+								</a>	
+							</div>
+						</div>
+					</div>
+				</div>	
 				<div class="ui bottom attached segment" id="links_content">
-					<p>Links</p>
+					Links	
 				</div>
 			</div>	
 		</div>
