--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
 		<link href='./Semantic-UI-master/dist/semantic.min.css' rel="stylesheet" type="text/css">
 		<script src='.//Semantic-UI-master/dist/semantic.min.js'></script>
 		<link href="https://fonts.googleapis.com/css?family=Poppins" rel="stylesheet">
+		<link href='./slider/js-image-slider.css' rel='stylesheet' type='text/css'>
+		<script src='./slider/js-image-slider.js' type='text/javascript'></script>
 		<link href="app.css" rel="stylesheet" type="text/css"></link>
 		<title>NCKU EE</title>
 	</head>
@@ -15,6 +17,14 @@
 				</br>
 				Department of Electrical Engineering</br>
 			</span>
+			<div id="sliderFrame">
+				<div id="slider">
+					<img src="./image/imageedit_2_5625287823_resized.jpg" />
+					<img src="./image/imageedit_3_8647191997_resized.jpg" />
+					<img src="./image/imageedit_4_8263304017_resized.jpg" />
+					<img src="./image/imageedit_5_6077329009_resized.jpg" />
+				</div>
+			</div>
 			<button class="ui inverted basic button">INTO</button>
 			<ul>
 				<li>
@@ -81,26 +91,38 @@
 								</a>
 							</div>
 						</div>
-						<div>
-							<div>
-							</div>
-							<div>
-							</div>
-							<div>
-							</div>
-							<div>
-							</div>
-							<div>
-							</div>
-							<div>
-							</div>
-							<div>
-							</div>
-							<div>
-							</div>
-							<div>
-							</div>
-							<div>
+						<div class="twelve wide stretched column">
+							<div class="ui segment">
+								<div class="news_info">
+									hehehe
+								</div>
+								<div class="news_info">
+									dldld
+								</div>
+								<div class="news_info">
+									dlddl
+								</div>
+								<div class="news_info">
+									mapokd
+								</div>
+								<div class="news_info">
+									dlsk;s;ls
+								</div>
+								<div class="news_info">
+									ldicme
+								</div>
+								<div class="news_info">
+									qkixe
+								</div>
+								<div class="news_info">
+									dkis
+								</div>
+								<div class="news_info">
+									lgdme
+								</div>
+								<div class="news_info">
+									suaix
+								</div>
 							</div>
 						</div>
 						<div>
