--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
 								</a>
 							</div>
 						</div>
-						<div class="twelve wide stretched column" id="news">
+						<div class="twelve wide stretched column" data=news  id="news">
 							<div class="ui segment">	
 								<div class="news_info">
 									Congratulations to Professor Bin-Da Liu for receiving the 2016 IEEE Life Fellow
