fix shape & data style

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     	<meta name='viewport' content='width=device-width, initial-scale=1'>
 		<script src='./jquery-3.1.0.min.js'></script>
 		<link href='./Semantic-UI-master/dist/semantic.min.css' rel="stylesheet" type="text/css">
-		<script src='.//Semantic-UI-master/dist/semantic.min.js'></script>
+		<script src='./Semantic-UI-master/dist/semantic.min.js'></script>
 		<link href="https://fonts.googleapis.com/css?family=Poppins" rel="stylesheet">
 		<link href="app.css" rel="stylesheet" type="text/css"></link>
 		<title>NCKU EE</title>
@@ -47,7 +47,7 @@
 					</div>
 				</div>
 			</div>
-			<button class="ui inverted basic button">INTO</button>
+			<button class="ui inverted button">INTO</button>
 			<ul>
 				<li>
 					<i class="call icon"></i>
@@ -105,80 +105,137 @@
 								<a class="item" id="admission_button">
 									Adimission
 								</a>
-								<a class="item">
+								<a class="item" id="scholarship_button">
 									Scholarship
 								</a>
-								<a class="item">
+								<a class="item" id="employment_button">
 									Employment
 								</a>
 							</div>
 						</div>
-						<div class="twelve wide stretched column" data=news  id="news">
+						<div class="twelve wide stretched column" data=news>
 							<div class="ui segment">	
-								<div class="news_info">
+								<div class="news info">
 									Congratulations to Professor Bin-Da Liu for receiving the 2016 IEEE Life Fellow
 								</div>
-								<div class="news_info">
+								<div class="news info">
 									Congratulations to Professor Tsorng-Juu Liang for receiving the 2016 IEEE Fellow
 								</div>
-								<div class="news_info">
+								<div class="news info">
 									EEiMakerSpace grandly opened Today!
 								</div>
-								<div class="news_info">
+								<div class="news info">
 									Open House Day. Visitors welcome!
 								</div>
-								<div class="news_info">
+								<div class="news info">
 									2016 Fall Master・s Program Applicant Interview
 								</div>
-								<div class="news_info">
+								<div class="news info">
 									Congratulations to Professor Chuang Huey-Ru for receiving the IEEE Best Advisor Award for Doctoral Thesis
 								</div>
-								<div class="news_info">
+								<div class="news info">
 									Congratulations to Professor Pau-Choo Chung for receiving the 2015 National Colleges Information Technology Services Innovation Competition
 								</div>
-								<div class="news_info">
+								<div class="news info">
 									Congratulations on Professor Tai-Haur Kuo accepted paper for 2016 IEEE International Solid-State Circuits Conference(ISSCC)
 								</div>
-								<div class="news_info">
+								<div class="news info">
 									2016 Fall Master・s Program Preliminary Exam Results
 								</div>
-								<div class="news_info">
+								<div class="news info">
 									NCKU Students wisdom electric vehicles assistive devices to be rewarded of MXIC Golden Silicon Awards affirmative.
 								</div>
-							</div>
-						</div>
-						<div class="twelve wide stretched column" id="admission">
-							<div class="ui segment">
-								<div class="news_info">
-									skdjl;sakd
+								<div class="admission info">
+									eidkiekdiekd
 								</div>
-								<div class="news_info">
-									Congratulations to Professor Tsorng-Juu Liang for receiving the 2016 IEEE Fellow
+								<div class="admission info">
+									IEEE Fellow
 								</div>
-								<div class="news_info">
-									EEiMakerSpace grandly opened Today!
+								<div class="admission info">
+									Today!
 								</div>
-								<div class="news_info">
+								<div class="admission info">
 									Open House Day. Visitors welcome!
 								</div>
-								<div class="news_info">
-									2016 Fall Master・s Program Applicant Interview
+								<div class="admission info">
+									2016 Fall Applicant Interview
 								</div>
-								<div class="news_info">
+								<div class="admission info">
 									Congratulations to Professor Chuang Huey-Ru for receiving the IEEE Best Advisor Award for Doctoral Thesis
 								</div>
-								<div class="news_info">
+								<div class="admission info">
 									Congratulations to Professor Pau-Choo Chung for receiving the 2015 National Colleges Information Technology Services Innovation Competition
 								</div>
-								<div class="news_info">
+								<div class="admission info">
 									Congratulations on Professor Tai-Haur Kuo accepted paper for 2016 IEEE International Solid-State Circuits Conference(ISSCC)
 								</div>
-								<div class="news_info">
+								<div class="admission info">
 									2016 Fall Master・s Program Preliminary Exam Results
 								</div>
-								<div class="news_info">
+								<div class="admission info">
+									NCKU Students wisdom electric vehicles assistive devices to be rewarded of MXIC Golden Silicon Awards affirmative.
+								</div>
+								<div class="scholarship info">
+									NCKU Students wisdom electric vehicles assistive devices to be rewarded of MXIC Golden Silicon Awards affirmative.
+								</div>
+								<div class="scholarship info">
+									NCKU Students wisdom electric vehicles assistive devices to be rewarded of MXIC Golden Silicon Awards affirmative.
+								</div>
+								<div class="scholarship info">
+									NCKU Students wisdom electric vehicles assistive devices to be rewarded of MXIC Golden Silicon Awards affirmative.
+								</div>
+								<div class="scholarship info">
 									NCKU Students wisdom electric vehicles assistive devices to be rewarded of MXIC Golden Silicon Awards affirmative.
 								</div>	
+								<div class="scholarship info">
+									do you hear the people sing
+								</div>	
+								<div class="scholarship info">
+									singing a song of angry man
+								</div>	
+								<div class="scholarship info">
+									this is a music of a people who will not be slaved again
+								</div>	
+								<div class="scholarship info">
+									when the beating of your heart
+								</div>	
+								<div class="scholarship info">
+									echo a beating of a drum
+								</div>	
+								<div class="scholarship info">
+									this is a life about to start when tomorrow come 
+								</div>
+								<div class="employment info">
+									Hey soul sister
+								</div>
+								<div class="employment info">
+									Hey there mister mister
+								</div>
+								<div class="employment info">
+									On the radio sterio
+								</div>
+								<div class="employment info">
+									The way you move ain't fair 
+								</div>
+								<div class="employment info">
+									I don't wanna miss a single thing you do tonight
+								</div>
+								<div class="employment info">
+									Congratulations to Professor Chuang Huey-Ru for receiving the IEEE Best Advisor Award for Doctoral Thesis
+								</div>
+								<div class="employment info">
+									Congratulations to Professor Pau-Choo Chung for receiving the 2015 National Colleges Information Technology Services Innovation Competition
+								</div>
+								<div class="employment info">
+									Congratulations on Professor Tai-Haur Kuo accepted paper for 2016 IEEE International Solid-State Circuits Conference(ISSCC)
+								</div>
+								<div class="employment info">
+									2016 Fall Master・s Program Preliminary Exam Results
+								</div>
+								<div class="employment info">
+									NCKU Students wisdom electric vehicles assistive devices to be rewarded of MXIC Golden Silicon Awards affirmative.
+								</div>
+
 							</div>
 						</div>
 						<div>
