--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
 		</div>
 		<div id="content">
 			<div>
-				<div class="ui top attached tabular menu">
+				<div class="ui top attached tabular menu" data-content=announce>
 					<a class="item active" id='announce'>
 						<i class="announcement icon"></i>
 						Announce
@@ -95,7 +95,7 @@
 						Links
 					</a>
 				</div>
-				<div class="ui bottom attached segment show" id="announce_content">
+				<div class="ui bottom attached segment" id="announce_content">
 					<div class="ui grid">
 						<div class="four wide column">
 							<div class="ui vertical fluid tabular menu">
