--- a/public/index.html
+++ b/public/index.html
@@ -1,6 +1,6 @@
 <html>
 	<head>
-    	<meta name='viewport' content='width=device-width, initial-scale=1'>
+		<!--		<meta name='viewport' content='width=device-width, initial-scale=1'>-->
 		<script src='./bower_components/jquery/dist/jquery.min.js'></script>
 		<link href='./bower_components/semantic-ui/dist/semantic.min.css' rel="stylesheet" type="text/css">
 		<script src='./bower_components/semantic-ui/dist/semantic.min.js'></script>
@@ -16,6 +16,7 @@
 				</br>
 				Department of Electrical Engineering</br>
 			</span>
+			<!--
 			<div class="ui people shape">
 				<div class="sides">	
 					<div class="active side">
@@ -48,7 +49,9 @@
 					</div>
 				</div>
 			</div>
+			-->
 			<button class="ui inverted button">INTO</button>
+			<!--
 			<ul>
 				<li>
 					<i class="call icon"></i>
@@ -71,6 +74,7 @@
 					Chinese
 				</li>
 			</ul>
+			-->
 		</div>
 		<div id="content">
 			<div>
