--- a/public/index.html
+++ b/public/index.html
@@ -78,7 +78,7 @@
 		</div>
 		<div id="content">
 			<div>
-				<div class="ui top attached tabular menu" data-content=announce>
+				<div class="ui top attached tabular menu borderless" data-content=announce>
 					<a class="item active" id='announce'>
 						<i class="announcement icon"></i>
 						Announce
@@ -104,10 +104,10 @@
 						Links
 					</a>
 				</div>
-				<div class="ui bottom attached segment" id="announce_content">
+				<div class="ui bottom attached segment borderless" id="announce_content">
 					<div class="ui grid">
 						<div class="four wide column">
-							<div class="ui vertical fluid tabular menu">
+							<div class="ui vertical fluid tabular menu borderless">
 								<a class="item active" id="news_button">
 									NEWS
 								</a>
@@ -128,7 +128,7 @@
 								<div id="admission-content"></div>
 								<div id="scholarship-content"></div>
 								<div id="employment-content"></div>
-							 </div>
+							</div>
 						</div>
 						<div>
 						</div>
@@ -136,10 +136,10 @@
 						</div>
 					</div>
 				</div>
-				<div class="ui bottom attached segment" id="research_content">
+				<div class="ui bottom attached segment borderless" id="research_content">
 					<div class="ui grid">
 						<div class="four wide column">
-							<div class="ui vertical fluid tabular menu">
+							<div class="ui vertical fluid tabular menu borderless">
 								<a class="item active">
 									Research</br>
 									interest</br>
@@ -152,10 +152,10 @@
 						</div>
 					</div>
 				</div>
-				<div class="ui bottom attached segment" id="about_content">
+				<div class="ui bottom attached segment borderless" id="about_content">
 					<div class="ui grid">
 						<div class="four wide column">
-							<div class="ui vertical fluid tabular menu">
+							<div class="ui vertical fluid tabular menu borderless">
 								<a class="item active">
 									History
 								</a>
@@ -166,10 +166,10 @@
 						</div>
 					</div>
 				</div>
-				<div class="ui bottom attached segment" id="people_content">
+				<div class="ui bottom attached segment borderless" id="people_content">
 					<div class="ui grid">
 						<div class="four wide column">
-							<div class="ui vertical fluid tabular menu">
+							<div class="ui vertical fluid tabular menu borderless">
 								<a class="item active">
 									Faculty
 								</a>
@@ -180,10 +180,10 @@
 						</div>
 					</div>
 				</div>
-				<div class="ui bottom attached segment" id="students_content">
+				<div class="ui bottom attached segment borderless" id="students_content">
 					<div class="ui grid">
 						<div class="four wide column">
-							<div class="ui vertical fluid tabular menu">
+							<div class="ui vertical fluid tabular menu borderless">
 								<a class="item active">
 									Activity
 								</a>
@@ -197,7 +197,7 @@
 						</div>
 					</div>
 				</div>	
-				<div class="ui bottom attached segment" id="links_content">
+				<div class="ui bottom attached segment borderless" id="links_content">
 					Links	
 				</div>
 			</div>	
