--- a/public/index.html
+++ b/public/index.html
@@ -121,7 +121,8 @@
 							</div>
 						</div>
 						<div class="twelve wide stretched column" data="news">
-							<div class="ui segment">	
+							<div class="ui segment">
+								<div id="date-content"></div>
 								<div id="news-content"></div>	
 								<div id="admission-content"></div>
 								<div id="scholarship-content"></div>
