--- a/public/index.html
+++ b/public/index.html
@@ -204,7 +204,11 @@
 		<div id="footer" >
 			<span>
 				<i class="copyright icon"></i>Copyright NCKU EE 2016
-			</span>	
+			</span>
+			<button class="ui inverted button lower" id="white">white</button>
+			<button class="ui inverted teal button" id="teal">Teal</button>
+			<button class="ui inverted blue button" id="blue">Blue</button>
+			<button class="ui inverted olive button" id="olive">Olive</button>
 		</div>
 		<script src='./app.js'></script>
 	</body>
