--- a/public/index.html
+++ b/public/index.html
@@ -76,7 +76,7 @@
 		</div>
 		<div id="content">
 			<div>
-				<div class="ui top attached tabular menu borderless" data-content=announce>
+				<div class="ui top attached tabular menu borderless" data-content=announce data-color=teal>
 					<a class="item active" id='announce'>
 						<i class="announcement icon"></i>
 						Announce
@@ -100,11 +100,11 @@
 					<a class="item" id='links'>
 						<i class="linkify icon"></i>
 						Links
-					</a>
-				</div>
+					</a>			
+				</div>	
 				<div class="ui bottom attached segment borderless" id="announce_content">
-					<div class="ui grid">
-						<div class="four wide column">
+					<div class="ui grid">	
+						<div class="column"id="left_bar">
 							<div class="ui vertical fluid tabular menu borderless">
 								<a class="item active" id="news_button">
 									NEWS
@@ -120,7 +120,7 @@
 								</a>
 							</div>
 						</div>
-						<div class="twelve wide stretched column" data="news">
+						<div class="twelve wide stretched column" id="right_bar"  data="news">
 							<div class="ui segment">
 								<div id="date-content"></div>
 								<div id="news-content"></div>	
@@ -137,7 +137,7 @@
 				</div>
 				<div class="ui bottom attached segment borderless" id="research_content">
 					<div class="ui grid">
-						<div class="four wide column">
+						<div class="column">
 							<div class="ui vertical fluid tabular menu borderless">
 								<a class="item active">
 									Research</br>
@@ -153,7 +153,7 @@
 				</div>
 				<div class="ui bottom attached segment borderless" id="about_content">
 					<div class="ui grid">
-						<div class="four wide column">
+						<div class="column">
 							<div class="ui vertical fluid tabular menu borderless">
 								<a class="item active">
 									History
@@ -167,7 +167,7 @@
 				</div>
 				<div class="ui bottom attached segment borderless" id="people_content">
 					<div class="ui grid">
-						<div class="four wide column">
+						<div class="column">
 							<div class="ui vertical fluid tabular menu borderless">
 								<a class="item active">
 									Faculty
@@ -181,7 +181,7 @@
 				</div>
 				<div class="ui bottom attached segment borderless" id="students_content">
 					<div class="ui grid">
-						<div class="four wide column">
+						<div class="column">
 							<div class="ui vertical fluid tabular menu borderless">
 								<a class="item active">
 									Activity
@@ -202,9 +202,9 @@
 			</div>	
 		</div>
 		<div id="footer" >
-			<span>
+			<div>
 				<i class="copyright icon"></i>Copyright NCKU EE 2016
-			</span>
+			</div>
 			<button class="ui inverted button lower" id="white">white</button>
 			<button class="ui inverted teal button" id="teal">Teal</button>
 			<button class="ui inverted blue button" id="blue">Blue</button>
